30-tools/keycloak/prd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          args: ["start-dev"]
      restartPolicy: Always
